# parseus

./: .gitignore  CMakeLists.txt  README.md  license.txt
cpp_langtree/: CMakeLists.txt  class.cpp  class.h  cpp_langtreelib.h  globalscope.cpp  globalscope.h  languageelement.cpp  languageelement.h  namedscope.cpp  namedscope.h  namespace.cpp  namespace.h  scope.cpp  scope.h  specifier.cpp  specifier.h  stdafx.h  typequalifier.cpp  typequalifier.h
cpp_preprocessor/: CMakeLists.txt  breakpoint.cpp  breakpoint.h  fileinfo.h  macrohandler.cpp  macrohandler.h  macroresolver.cpp  nestinglevel.cpp  nestinglevel.h  pp_tokenizer.cpp  ppexpression.cpp  ppexpression.h  ppinterfaces.h  pragmahandler.cpp  pragmahandler.h  preprocessor.cpp  preprocessor.h  preprocessorlib.h  preprocessormacro.cpp  preprocessormacro.h  preprocessorstatistics.h  stdafx.cpp  stdafx.h
examples/: CMakeLists.txt
examples/ppdbmaker/: CMakeLists.txt  ppdbmaker.cpp  sqlitedb.cpp  sqlitedb.h  stdafx.h  test.sqlite
examples/preprocessor/: CMakeLists.txt  preprocessor.cpp  result.txt
parser_test/: CMakeLists.txt  ReadMe.txt  cpp_tokenprinter.cpp  cpp_tokenprinter.h  cpptestdata.inc  parser_test.cpp  parser_test.i  pastestdata.inc  phptestdata.inc  ppexptestdata.inc  pptestdata.inc  preproctestdata.inc  result.cpp  result.txt  stdafx.cpp  stdafx.h  test.cpp  test.h  testcpptokenhandler.cpp  testcpptokenhandler.h  testpastokenhandler.cpp  testpastokenhandler.h  testphptokenhandler.cpp  testphptokenhandler.h  testppexpression.cpp  testppexpression.h  testpptokenhandler.cpp  testpptokenhandler.h  testpreprocessor.cpp  testpreprocessor.h  teststringmem.cpp  teststringmem.h  testsuite.cpp  testsuite.h  testtokenhandler.cpp  testtokenhandler.h
parseus/: CMakeLists.txt  ReadMe.txt  cpp_tokenizer.cpp  cpp_tokenizer.h  logging.cpp  logging.h  macroresolver.cpp  macroresolver.h  nestinglevel.cpp  numberconverter.h  parseus.h  pas_tokenizer.cpp  pas_tokenizer.h  php_tokenizer.cpp  php_tokenizer.h  pp_tokenizer.cpp  pp_tokenizer.h  ppexpression.cpp  ppexpression.h  pragmahandler.cpp  pragmahandler.h  preprocessor.cpp  preprocessor.h  preprocessormacro.cpp  preprocessormacro.h  preprocessorstatistics.h  stdafx.cpp  stdafx.h  stringmem.cpp  stringmem.h  tokenizer.cpp  tokenizer.h
src/: cpp_tokenizer.cpp  parser.h  stdafx.h  stringmem.cpp  stringmem.h  tokenizer.cpp  tokenizer.h
tests/: CMakeLists.txt
tests/cpp_langtree/: CMakeLists.txt  main.cpp  testscope.cpp  testscope.h  testtype.cpp  testtype.h
tests/cppunit/: CMakeLists.txt  Exception.cpp  Exception.h  Test.h  TestCaller.h  TestCase.cpp  TestCase.h  TestFailure.cpp  TestFailure.h  TestMacros.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestResult.h  TestSuite.cpp  TestSuite.h  TextTestResult.cpp  TextTestResult.h  cppunit.h  estring.h
